<resources>

    <string name="tab_label1">TOP STORIES</string>
    <string name="tab_label2">MOST POPULAR</string>
    <string name="tab_label3">TECHNOLOGY</string>

    <string name="app_name">MyNews</string>
    <string name="title_home">My News</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_web">Article</string>
    <string name="title_activity_search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_notification">Notification</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="fragment_base_search_search_field">Search query items</string>
    <string name="fragment_base_search_politics">Politics</string>
    <string name="fragment_base_search_sports">Sports</string>
    <string name="fragment_base_search_travel">Travel</string>
    <string name="fragment_base_search_entrepreneurs">Entrepreneurs</string>
    <string name="fragment_base_search_business">Business</string>
    <string name="fragment_base_search_arts">Arts</string>
    <string name="fragment_base_search_end_date">End Date</string>
    <string name="fragment_base_search_begin_date">Begin Date</string>
    <string name="fragment_base_search_notifications_switch">Enable notifications (once per day)</string>
    <string name="fragment_base_search_search_btn_text">Search</string>
    <string name="date_format" translatable="false">DD.MM.YY</string>

    <!-- Used for notification -->
    <string name="channel_name">News alert</string>
    <string name="channel_description">Notify you when articles based on your research keywords are available, once a
        day
    </string>
    <string name="notification_title">Real Time Alert</string>
    <string name="notification_message">New articles available !</string>
    <string name="title_activity_search_result">Search Result</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_one_section_and_parimeter">You should enter at least one parameter and pick at least one section</string>
    <string name="toast_one_parameter">You should enter at least one parameter</string>
    <string name="toast_one_section">You should pick at least one section</string>
    <string name="no_results">No results</string>
    <string name="try_again_different_params">Try searching with different parameters</string>
    <string name="enable_notifications">Enable notifications (once per day)</string>
    <string name="notification_new_title">There are new articles</string>
    <string name="notification_new_subtitle">open the app to see notifications matching your criteria</string>
    <string name="notifications_disabled">Notifications disabled</string>
    <string name="notifications_time">You will be reminded tomorrow at 7.00</string>
    <string name="notifications_title">Notifications</string>
    <string name="search_title">Search Articles</string>
    <string name="search_result_title">Search Results</string>
    <string name="webview_title">Article</string>
    <string name="type_arts">Arts</string>
    <string name="type_automobiles">Automobiles</string>
    <string name="type_books">Books</string>
    <string name="type_business">Business</string>
    <string name="type_fashion">Fashion</string>
    <string name="type_food">Food</string>
    <string name="type_health">Health</string>
</resources>
