<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_arts"
                android:title="@string/type_arts"/>
        <item
                android:id="@+id/nav_automobiles"
                android:title="@string/type_automobiles"/>
        <item
                android:id="@+id/nav_books"
                android:title="@string/type_books"/>
        <item
                android:id="@+id/nav_business"
                android:title="@string/type_business"/>
        <item
                android:id="@+id/nav_fashion"
                android:title="@string/type_fashion"/>
        <item
                android:id="@+id/nav_food"
                android:title="@string/type_food"/>
        <item
                android:id="@+id/nav_health"
                android:title="@string/type_health"/>
    </group>

    <item android:title="@string/action_settings">
            <menu>
            <item
                    android:id="@+id/nav_settings"
                    android:title="@string/action_settings"/> <item
                    android:id="@+id/nav_notifications"
                    android:title="@string/action_notification"/>

            </menu>
    </item>

</menu>
